--- a/pom.xml
+++ b/pom.xml
@@ -431,6 +431,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+    		<groupId>com.github.oshi</groupId>
+    		<artifactId>oshi-core</artifactId>
+    		<version>3.4.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<defaultGoal>assembly:assembly</defaultGoal>
