--- a/src/main/external-resources/renderers/MediaMonkey.conf
+++ b/src/main/external-resources/renderers/MediaMonkey.conf
@@ -37,7 +37,7 @@ Supported = f:avi           v:h264|mjpeg|mp4|mpeg2|vc1|xvid|wmv   a:aac|aac-he|m
 #Supported = f:divx
 Supported = f:flv           v:h264                                a:aac|mp3                                m:video/x-flv
 Supported = f:mp4|m4v|f4v   v:h264|mp4                            a:aac|aac-he|mp3|mpa                     m:video/mp4
-Supported = f:mkv           v:h264|mp4|mpeg2|xvid                 a:aac|aac-he|dts|mp3|mpa|vorbis          m:video/x-mkv
+Supported = f:mkv           v:h264|mp4|mpeg2|theora|xvid          a:aac|aac-he|dts|mp3|mpa|vorbis          m:video/x-mkv
 #Supported = f:mpegps        v:mpeg1|mpeg2                         a:ac3|lpcm|mpa                           m:video/mpeg
 Supported = f:mov           v:h264|mp4|mpeg2                      a:aac|aac-he|mp3|mpa|wma                 m:video/quicktime
 #Supported = f:rm
