--- a/src/main/external-resources/renderers/Sony-BraviaEX.conf
+++ b/src/main/external-resources/renderers/Sony-BraviaEX.conf
@@ -23,8 +23,8 @@ DLNALocalizationRequired = true
 DefaultVBVBufSize = true
 TranscodeExtensions = dvr-ms,dvr,mkv,dv,ty,mov,ogm,hdmov,hdm,rmv,rmvb,rm,asf,evo,asx,flv,m2v,mpe,mod,tivo,ty,tmf,ts,tp,m2p,mp4,m4v,avi,wmv,wm,divx,div,flac,mlp,fla,wma,m4a,aac,dts,mka,ape,ogg,shn,mpc,ra,mp2,wv,oma,aa3,gif,png,arw,cr2,crw,dng,raf,mrw,nef,pef,tif,tiff
 CreateDLNATreeFaster = true
-OverrideFFmpegVideoFilter = pad=max(iw\\,ih*16/9):max(ih\\,iw/16*9):(ow-iw)/2:(oh-ih)/2, setdar=4/3
-CustomMencoderOptions = -vf softskip,expand=::::1:16/9:2,scale=1283:720
+OverrideFFmpegVideoFilter = pad=max(iw*1.01\\,ih*1.01*(16/9)):ow/(16/9):(ow-iw)/16:(oh-ih)/16, setdar=4/3
+CustomMencoderOptions = -vf softskip,expand=::::1:16/9:2,scale=1283:720 -lavcopts aspect=16/9
 AccurateDLNAOrgPN = true
 MuxNonMod4Resolution = true
 HalveBitrate = true
