--- a/pom.xml
+++ b/pom.xml
@@ -355,12 +355,12 @@
 		<dependency>
 			<groupId>net.java.dev.jna</groupId>
 			<artifactId>jna</artifactId>
-			<version>4.2.2</version>
+			<version>4.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>net.java.dev.jna</groupId>
 			<artifactId>jna-platform</artifactId>
-			<version>4.2.2</version>
+			<version>4.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jdom</groupId>
@@ -521,7 +521,7 @@
 						-->
 						<argLine>-Duser.language=en -Djna.nosys=true -XX:-UseSplitVerifier</argLine> <!-- only one argLine element is processed -->
 					</configuration>
-					<version>2.19.1</version>
+					<version>2.20</version>
 				</plugin>
 
 				<!-- 
@@ -676,7 +676,12 @@
 					<target>1.7</target>
 					<testSource>1.7</testSource>
 					<testTarget>1.7</testTarget>
-					<compilerArgument>${compilerArgument}</compilerArgument>
+					<fork>false</fork>
+					<!-- <compilerArgument>${compilerArgument}</compilerArgument> -->
+					<compilerArgs>
+						<arg>-verbose</arg>
+						<arg>-Xlint:all,-options,-path</arg>
+					 </compilerArgs>
 				</configuration>
 			</plugin>
 
@@ -786,7 +791,7 @@
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-surefire-report-plugin</artifactId>
-							<version>2.19.1</version>
+							<version>2.20</version>
 							<configuration>
 								<showSuccess>false</showSuccess>
 							</configuration>
