Attempt to fix AAC

--- a/src/main/external-resources/renderers/DefaultRenderer.conf
+++ b/src/main/external-resources/renderers/DefaultRenderer.conf
@@ -572,7 +572,8 @@ CharMap =
 #    adpcm    Adaptive differential pulse-code modulation   audio/x-adpcm
 #    adts     Audio Data Transport Stream                   audio/vnd.dlna.adts
 #    aiff     Audio Interchange File Format                 audio/L16
-#    alac     Apple Lossless Audio Codec                    audio/m4a
+#    alac     Apple Lossless Audio Codec                    audio/x-m4a                     Or audio/m4a
+#    als      Audio Lossless Coding                                                         Also known as MPEG-4 ALS
 #    als      Audio Lossless Coding (MPEG-4 ALS)
 #    amr      Adaptive Multi-Rate audio codec               audio/amr
 #    ape      Monkey's Audio                                audio/x-ape
