--- a/src/main/external-resources/renderers/DefaultRenderer.conf
+++ b/src/main/external-resources/renderers/DefaultRenderer.conf
@@ -566,13 +566,16 @@ CharMap =
 #    3gp      3rd Generation Partnership Project            video/3gpp
 #    3g2a     3rd Generation Partnership Project 2 Audio    audio/3gpp2
 #    3g2      3rd Generation Partnership Project 2          video/3gpp2
-#    aac      Advanced Audio Coding (Low Complexity)        audio/x-m4a
-#    aac-he   Advanced Audio Coding (High-Efficiency)       audio/aacp
+#    aac      Advanced Audio Coding (Low Complexity)        audio/mp4                      Or audio/aac
+#    aac-he   Advanced Audio Coding (High-Efficiency)       audio/mp4                      Or audio/x-dab for recording of Radio Broadcasts and for Digital Radio Broadcasting
+#    aac-ltp  Advanced Audio Coding (Long Term Prediction)  audio/mp4
+#    aacv4    AAC version 4 (Low Complexity)                audio/mp4                      Or audio/aac
 #    ac3      Audio Codec 3 (Dolby Digital)                 audio/vnd.dolby.dd-raw
 #    adpcm    Adaptive differential pulse-code modulation   audio/x-adpcm
 #    adts     Audio Data Transport Stream                   audio/vnd.dlna.adts
 #    aiff     Audio Interchange File Format                 audio/L16
-#    alac     Apple Lossless Audio Codec                    audio/m4a
+#    alac     Apple Lossless Audio Codec                    audio/x-m4a                     Or audio/m4a
+#    als      Audio Lossless Coding                                                         Also known as MPEG-4 ALS
 #    amr      Adaptive Multi-Rate audio codec               audio/amr
 #    ape      Monkey's Audio                                audio/x-ape
 #    atmos    Dolby Atmos audio
@@ -612,6 +615,7 @@ CharMap =
 #    mpegps   MPEG Program Stream                           video/mpeg                         Used in DVDs and VCDs
 #    mpegts   MPEG Transport Stream                         video/mpeg                         Used in sat TV and Blu-ray Discs
 #    mpegts   MPEG Transport Stream                         video/vnd.dlna.mpeg-tts            Alternative MIME-type for MPEG TS
+#    oga      Ogg Audio                                     audio/ogg
 #    ogx      Ogg container                                 application/ogg
 #    opus     Ogg Opus                                      audio/ogg
 #    png      Portable Network Graphics                     image/png
