Implemented support for containers that can be either audio or video media

--- a/src/main/external-resources/renderers/BlackBerry-PlayBook-KalemSoftMP.conf
+++ b/src/main/external-resources/renderers/BlackBerry-PlayBook-KalemSoftMP.conf
@@ -39,7 +39,7 @@ Supported = f:wmv                 m:video/x-ms-wmv
 Supported = f:wav    m:audio/wav        n:6   a:dts|lpcm     s:48000
 Supported = f:wav    m:audio/wav        n:2                  s:48000
 Supported = f:mp3    m:audio/mpeg       n:2
-Supported = f:aac    m:audio/x-m4a      n:2   a:(?!alac).+
+Supported = f:aac-lc m:audio/x-m4a      n:2   a:(?!alac).+
 Supported = f:wma    m:audio/x-ms-wma
 Supported = f:ogg    m:audio/ogg
 Supported = f:flac   m:audio/flac
