--- a/src/main/external-resources/renderers/DefaultRenderer.conf
+++ b/src/main/external-resources/renderers/DefaultRenderer.conf
@@ -566,13 +566,14 @@ CharMap =
 #    3gp      3rd Generation Partnership Project            video/3gpp
 #    3g2a     3rd Generation Partnership Project 2 Audio    audio/3gpp2
 #    3g2      3rd Generation Partnership Project 2          video/3gpp2
-#    aac      Advanced Audio Coding (Low Complexity)        audio/x-m4a
-#    aac-he   Advanced Audio Coding (High-Efficiency)       audio/aacp
+#    aac-lc   Advanced Audio Coding (Low Complexity)        audio/aac
+#    aac-main Advanced Audio Coding (Main profile)          audio/aac
 #    ac3      Audio Codec 3 (Dolby Digital)                 audio/vnd.dolby.dd-raw
 #    adpcm    Adaptive differential pulse-code modulation   audio/x-adpcm
 #    adts     Audio Data Transport Stream                   audio/vnd.dlna.adts
 #    aiff     Audio Interchange File Format                 audio/L16
 #    alac     Apple Lossless Audio Codec                    audio/m4a
+#    als      Audio Lossless Coding (MPEG-4 ALS)
 #    amr      Adaptive Multi-Rate audio codec               audio/amr
 #    ape      Monkey's Audio                                audio/x-ape
 #    atmos    Dolby Atmos audio
@@ -594,6 +595,7 @@ CharMap =
 #    h263     H.263 video compression standard              video/h263
 #    h264     H.264/MPEG-4 Part 10 (AVC)                    video/h264
 #    h265     High Efficiency Video Coding (HEVC)           video/h265
+#    he-aac   Advanced Audio Coding (High-Efficiency)       audio/aacp
 #    jpg      JPEG                                          image/jpeg
 #    lpcm     Linear Pulse-Code Modulation                  audio/L16
 #    mjpeg    Motion JPEG                                   video/x-motion-jpeg
@@ -604,7 +606,7 @@ CharMap =
 #    mp2      MPEG Audio Layer II                           audio/mpeg
 #    mp3      MPEG-1 or MPEG-2 Audio Layer III              audio/mpeg
 #    mp4      ISOM/MPEG4 container, or MPEG-4 codec         video/mp4                          For Video files
-#    mp4      ISOM/MPEG4 container, AAC/AAC-HE/ALAC codec   audio/x-m4a                        For Audio files
+#    mp4      ISOM/MPEG4 container, AAC-LC/HE-AAC/ALAC      audio/mp4                          For Audio files
 #    mpa      MPEG Audio                                    audio/mpeg
 #    mpc      MusePack                                      audio/x-musepack
 #    mpeg1    MPEG-1                                        video/mpeg                         Used in VCDs
