--- a/src/main/external-resources/renderers/Google-Android-Chromecast.conf
+++ b/src/main/external-resources/renderers/Google-Android-Chromecast.conf
@@ -40,12 +40,12 @@ CustomFFmpegOptions = -async 1 -fflags +genpts -c:a libmp3lame -ac 2 -b:v 35000k
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:mp4     v:mp4|h264   a:aac|aac-he|mp3   n:2   m:video/mp4
+Supported = f:mp4     v:mp4|h264   a:aac-lc|he-aac|mp3   n:2   m:video/mp4
 
 # Supported audio formats:
-Supported = f:aac         n:2      m:audio/aac       a:aac|aac-he
+Supported = f:aac         n:2      m:audio/aac       a:aac-lc|he-aac
 Supported = f:mp3         n:2      m:audio/mp3
-Supported = f:m4a|mp4     n:2      m:audio/mp4       a:aac|aac-he
+Supported = f:m4a|mp4     n:2      m:audio/mp4       a:aac-lc|he-aac
 Supported = f:wav         n:2      m:audio/x-wav     a:lpcm
 
 # Supported subtitles formats:
@@ -54,13 +54,13 @@ SupportedExternalSubtitlesFormats = WEBVTT
 # Supported Media Type: https://developers.google.com/cast/docs/media
 #	All Google Cast devices at a minimum support the following media types:
 #		Video codecs: H.264 High Profile Level 4.1, 4.2 and 5, VP8
-#		Audio decoding: HE-AAC, LC-AAC, CELT/Opus, MP3, Vorbis
+#		Audio decoding: HE-AAC, AAC-LC, CELT/Opus, MP3, Vorbis
 #		Containers: MP4/CENC, WebM, MPEG-DASH, SmoothStreaming
 #		Level 1 DRM support: Widevine, PlayReady
 
 # This is the important part (thanks Einzeln):
 #   (Make audio work)
-#      -c:a = codec in this case we use libmp3lame for MP3 | libvo-aacenc for LC-AAC and -ac is limiting audio channels for casting.
+#      -c:a = codec in this case we use libmp3lame for MP3 | libvo-aacenc for AAC-LC and -ac is limiting audio channels for casting.
 #   (Prevent stutter due to slow connection)
 #      -b:v and -bufsize should ensure the encoded video does not exceed a bitrate that can fit through a wifi connection.
 #      These sometimes seem to be ignored in the same way MaxVideoBitrateMBPS does.
