--- a/src/main/external-resources/renderers/Netgem-N7700.conf
+++ b/src/main/external-resources/renderers/Netgem-N7700.conf
@@ -22,7 +22,7 @@ HalveBitrate = true
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:mpegts   v:h264   a:aac|ac3   m:video/mpeg
+Supported = f:mpegts   v:h264   a:aac-lc|ac3   m:video/mpeg
 
 # Supported audio formats:
 Supported = f:mp3   m:audio/mpeg
