--- a/src/main/external-resources/renderers/Panasonic-DMPBDT220.conf
+++ b/src/main/external-resources/renderers/Panasonic-DMPBDT220.conf
@@ -30,8 +30,8 @@ SendDateMetadata = false
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:mkv      v:h264         a:aac|ac3   m:video/x-matroska
-Supported = f:mpegts   v:h264|mpeg2   a:ac3       m:video/mpeg
+Supported = f:mkv      v:h264         a:aac-lc|ac3 m:video/x-matroska
+Supported = f:mpegts   v:h264|mpeg2   a:ac3        m:video/mpeg
 
 # Supported audio formats:
 Supported = f:flac   m:audio/flac
