--- a/src/main/external-resources/renderers/Panasonic-DMR.conf
+++ b/src/main/external-resources/renderers/Panasonic-DMR.conf
@@ -34,15 +34,15 @@ TranscodedVideoFileSize = 1000000
 SendDateMetadata = false
 MediaInfo = true
 
-# Supported video formats: DTS/DTS-HD/TRUEHD/EAC3/MPA/AAC-HE ?
+# Supported video formats: DTS/DTS-HD/TRUEHD/EAC3/MPA/HE-AAC ?
 Supported = f:avi       v:h264|xvid     a:ac3|mp3                              m:video/avi
-Supported = f:mkv       v:h264          a:aac|ac3|dts|flac|lpcm|mp3|vorbis     m:video/x-matroska
-Supported = f:mp4       v:h264          a:aac|ac3                              m:video/mp4
+Supported = f:mkv       v:h264          a:aac-lc|ac3|dts|flac|lpcm|mp3|vorbis  m:video/x-matroska
+Supported = f:mp4       v:h264          a:aac-lc|ac3                           m:video/mp4
 Supported = f:mpegps    v:mpeg2         a:ac3|lpcm                             m:video/mpeg
-Supported = f:mpegts    v:h264|mpeg2    a:aac-he|ac3|mpa                       m:video/vnd.dlna.mpeg-tts
+Supported = f:mpegts    v:h264|mpeg2    a:he-aac|ac3|mpa                       m:video/vnd.dlna.mpeg-tts
 
 # Supported audio formats:
-Supported = f:aac|m4a                   a:aac                                  m:audio/x-m4a
+Supported = f:aac|m4a                   a:aac-lc                               m:audio/x-m4a
 Supported = f:flac                                                             m:audio/flac
 Supported = f:mp3          n:2                                    s:48000      m:audio/mpeg
 Supported = f:wav                       a:lpcm                                 m:audio/L16
