--- a/src/main/external-resources/renderers/Philips-PFL.conf
+++ b/src/main/external-resources/renderers/Philips-PFL.conf
@@ -175,14 +175,14 @@ Supported = f:mpegts   v:mpeg2       a:mpa|ac3|lpcm                     m:video/
 Supported = f:avi      v:mp4         a:ac3|mp3|mpa                      m:video/x-msvideo
 Supported = f:avi      v:divx        a:ac3|mp3|mpa                      m:video/x-msvideo               qpel:no
 Supported = f:divx     v:divx        a:ac3|mp3|mpa                      m:video/x-msvideo
-Supported = f:mp4      v:h264        a:aac|he-aac|ac3|mp3|mpa           m:video/h264                    b:4528690
-Supported = f:mp4      v:mp4         a:aac|he-aac|ac3|mp3|mpa           m:video/h264
+Supported = f:mp4      v:h264        a:aac-lc|he-aac|ac3|mp3|mpa        m:video/h264                    b:4528690
+Supported = f:mp4      v:mp4         a:aac-lc|he-aac|ac3|mp3|mpa        m:video/h264
 Supported = f:wmv      v:vc1         a:wma                              m:video/x-ms-wmv                n:2          s:48000
-Supported = f:mkv      v:h264        a:aac|he-aac|ac3|mp3|mpa           m:video/x-matroska
+Supported = f:mkv      v:h264        a:aac-lc|he-aac|ac3|mp3|mpa        m:video/x-matroska
 
 # Supported audio formats:
-Supported = f:adts       n:2   a:aac    s:48000               m:audio/vnd.dlna.adts
+Supported = f:adts       n:2   a:aac-lc s:48000               m:audio/vnd.dlna.adts
 Supported = f:aiff|wav   n:2   a:lpcm   s:44100   b:1445069   m:audio/L16
 Supported = f:mp3|mpa    n:2            s:48000   b:327680    m:audio/mpeg
-Supported = f:mp4        n:6   a:aac    s:48000   b:327680    m:audio/mp4
+Supported = f:mp4        n:6   a:aac-lc s:48000   b:327680    m:audio/mp4
 Supported = f:wma        n:2   a:wma    s:48000   b:348160    m:audio/x-ms-wma
