--- a/src/main/external-resources/renderers/Roku-Roku3-5.conf
+++ b/src/main/external-resources/renderers/Roku-Roku3-5.conf
@@ -25,12 +25,12 @@ HalveBitrate = true
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:mkv      v:h264|mp4   a:aac|flac|lpcm|mp2|mp3   n:2   m:video/x-matroska
-Supported = f:mov      v:h264|mp4   a:aac|lpcm|mp2|mp3        n:2   m:video/quicktime
-Supported = f:mp4      v:h264|mp4   a:aac|lpcm|mp2|mp3        n:2   m:video/mp4
-Supported = f:mpegps   v:h264|mp4   a:aac|lpcm|mp2|mp3        n:2   m:video/mpeg
-Supported = f:mpegts   v:h264       a:aac|lpcm|mp2|mp3        n:2   m:video/mpeg
-Supported = f:wmv      v:wmv|vc1    a:wma                     n:2   m:video/x-ms-wmv
+Supported = f:mkv      v:h264|mp4   a:aac-lc|flac|lpcm|mp2|mp3   n:2   m:video/x-matroska
+Supported = f:mov      v:h264|mp4   a:aac-lc|lpcm|mp2|mp3        n:2   m:video/quicktime
+Supported = f:mp4      v:h264|mp4   a:aac-lc|lpcm|mp2|mp3        n:2   m:video/mp4
+Supported = f:mpegps   v:h264|mp4   a:aac-lc|lpcm|mp2|mp3        n:2   m:video/mpeg
+Supported = f:mpegts   v:h264       a:aac-lc|lpcm|mp2|mp3        n:2   m:video/mpeg
+Supported = f:wmv      v:wmv|vc1    a:wma                        n:2   m:video/x-ms-wmv
 
 # Supported audio formats:
 Supported = f:aac    m:audio/x-m4a
