--- a/src/main/external-resources/renderers/Samsung-D6400.conf
+++ b/src/main/external-resources/renderers/Samsung-D6400.conf
@@ -26,11 +26,11 @@ PrependTrackNumbers = true
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:3gp                 v:h264|mp4   a:aac|aac-he|adpcm   m:video/3gpp
-Supported = f:avi|mkv                                               m:video/avi
-Supported = f:flv                                                   m:video/mp4
-Supported = f:mov                                                   m:video/quicktime
-Supported = f:mp4|mpegps|mpegts                                     m:video/mpeg
+Supported = f:3gp                 v:h264|mp4   a:aac-lc|he-aac|adpcm m:video/3gpp
+Supported = f:avi|mkv                                                m:video/avi
+Supported = f:flv                                                    m:video/mp4
+Supported = f:mov                                                    m:video/quicktime
+Supported = f:mp4|mpegps|mpegts                                      m:video/mpeg
 
 # Supported audio formats:
 Supported = f:mp3   m:audio/mpeg
