--- a/src/main/external-resources/renderers/Samsung-ES8005.conf
+++ b/src/main/external-resources/renderers/Samsung-ES8005.conf
@@ -30,14 +30,14 @@ CharMap = / :
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:3gp             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vp6|wmv   a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   m:video/3gpp
-Supported = f:avi|divx        v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vp6|wmv   a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   m:video/avi
-Supported = f:mkv             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vp6|wmv   a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   m:video/x-matroska
-Supported = f:mov             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vp6|wmv   a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   m:video/quicktime
-Supported = f:mp4             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vp6|wmv   a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   m:video/mp4
-Supported = f:mpegps|mpegts   v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vp6|wmv   a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   m:video/mpeg
-Supported = f:webm            v:vp8                                       a:vorbis                                 m:video/webm
-Supported = f:wmv             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vp6|wmv   a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   m:video/x-ms-wmv
+Supported = f:3gp             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vp6|wmv   a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|wma   m:video/3gpp
+Supported = f:avi|divx        v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vp6|wmv   a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|wma   m:video/avi
+Supported = f:mkv             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vp6|wmv   a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|wma   m:video/x-matroska
+Supported = f:mov             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vp6|wmv   a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|wma   m:video/quicktime
+Supported = f:mp4             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vp6|wmv   a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|wma   m:video/mp4
+Supported = f:mpegps|mpegts   v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vp6|wmv   a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|wma   m:video/mpeg
+Supported = f:webm            v:vp8                                       a:vorbis                                    m:video/webm
+Supported = f:wmv             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vp6|wmv   a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|wma   m:video/x-ms-wmv
 
 # Supported audio formats:
 Supported = f:aac    m:audio/x-m4a
