--- a/src/main/external-resources/renderers/Samsung-HTE3.conf
+++ b/src/main/external-resources/renderers/Samsung-HTE3.conf
@@ -27,9 +27,9 @@ MediaInfo = true
 # Supported video formats:
 Supported = f:avi      v:h264|mp4           a:ac3|dts|lpcm|mp3|wma   m:video/avi
 Supported = f:mkv      v:h264|vc1           a:ac3|dts|mp3            m:video/x-matroska
-Supported = f:mp4      v:h264|mp4           a:aac                    m:video/mp4
+Supported = f:mp4      v:h264|mp4           a:aac-lc                 m:video/mp4
 Supported = f:mpegps   v:mpeg1|mpeg2|h264   a:ac3|dts|mpa            m:video/mpeg
-Supported = f:mpegts   v:mpeg1|mpeg2|h264   a:aac|ac3|dts|mpa        m:video/mpeg
+Supported = f:mpegts   v:mpeg1|mpeg2|h264   a:aac-lc|ac3|dts|mpa     m:video/mpeg
 Supported = f:wmv      v:wmv                a:wma                    m:video/x-ms-wmv
 
 # Supported audio formats:
