--- a/src/main/external-resources/renderers/Sony-BraviaW.conf
+++ b/src/main/external-resources/renderers/Sony-BraviaW.conf
@@ -37,9 +37,9 @@ MediaInfo = true
 # Supported video formats:
 Supported = f:avi             v:mp4|mjpeg              a:mp3|lpcm|mpa|ac3   qpel:no   gmc:0         m:video/avi
 Supported = f:mkv             v:mp4|h264               a:ac3|aac|mpa|ogg                            m:video/x-matroska
-Supported = f:mov             v:mp4|h264|mjpeg         a:aac|ac3|mpa|lpcm                           m:video/quicktime
+Supported = f:mov             v:mp4|h264|mjpeg         a:aac-lc|ac3|mpa|lpcm                        m:video/quicktime
 Supported = f:mp4             v:mp4|h264               a:ac3|mpa                                    m:video/mp4
-Supported = f:mp4             v:mp4|h264               a:aac                                  n:2   m:video/mp4
+Supported = f:mp4             v:mp4|h264               a:aac-lc                               n:2   m:video/mp4
 Supported = f:mpegps|mpegts   v:mpeg1|mpeg2|mp4|h264   a:ac3|lpcm|aac|mpa                           m:video/mpeg
 Supported = f:wmv             v:wmv|vc1                a:wma                                  n:2   m:video/x-ms-wmv
 
