--- a/src/main/external-resources/renderers/Sony-PlayStation4.conf
+++ b/src/main/external-resources/renderers/Sony-PlayStation4.conf
@@ -22,13 +22,13 @@ HalveBitrate = true
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:avi      v:mp4|h264     a:aac|ac3|mp3         m:video/avi
-Supported = f:mkv      v:h264         a:aac|ac3|mp3         m:video/x-matroska
-Supported = f:mkv      v:h264         a:aac-he        n:2   m:video/x-matroska
-Supported = f:mp4      v:h264         a:aac|ac3             m:video/mp4
-Supported = f:mp4      v:h264         a:aac-he        n:2   m:video/mp4
-Supported = f:mpegps   v:mpeg2        a:aac|ac3|lpcm|mpa    m:video/mpeg
-Supported = f:mpegts   v:mpeg2|h264   a:aac|ac3|mpa         m:video/mpeg
+Supported = f:avi      v:mp4|h264     a:aac-lc|ac3|mp3         m:video/avi
+Supported = f:mkv      v:h264         a:aac-lc|ac3|mp3         m:video/x-matroska
+Supported = f:mkv      v:h264         a:he-aac        n:2      m:video/x-matroska
+Supported = f:mp4      v:h264         a:aac-lc|ac3             m:video/mp4
+Supported = f:mp4      v:h264         a:he-aac        n:2      m:video/mp4
+Supported = f:mpegps   v:mpeg2        a:aac-lc|ac3|lpcm|mpa    m:video/mpeg
+Supported = f:mpegts   v:mpeg2|h264   a:aac-lc|ac3|mpa         m:video/mpeg
 
 # Supported audio formats:
 Supported = f:aac         m:audio/x-m4a
