--- a/src/main/external-resources/renderers/Apple-TV-VLC.conf
+++ b/src/main/external-resources/renderers/Apple-TV-VLC.conf
@@ -23,13 +23,13 @@ SendFolderThumbnails = false
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:avi             v:mp4          a:mp2|mp3                                       m:video/avi
-Supported = f:mkv             v:h264|mp4     a:aac|aac-he|ac3|dts|flac|mp2|mp3|opus|vorbis   m:video/x-matroska
-Supported = f:mov                                                                            m:video/quicktime
-Supported = f:mp4             v:h264|mp4     a:aac|aac-he|ac3                                m:video/mp4
-Supported = f:mpegps|mpegts   v:h264|mpeg2   a:aac                                           m:video/mpeg
-Supported = f:rm                                                                             m:application/vnd.rn-realmedia-vbr
-Supported = f:wmv                                                                            m:video/x-ms-wmv
+Supported = f:avi             v:mp4          a:mp2|mp3                                        m:video/avi
+Supported = f:mkv             v:h264|mp4     a:aac-lc|he-aac|ac3|dts|flac|mp2|mp3|opus|vorbis m:video/x-matroska
+Supported = f:mov                                                                             m:video/quicktime
+Supported = f:mp4             v:h264|mp4     a:aac-lc|he-aac|ac3                              m:video/mp4
+Supported = f:mpegps|mpegts   v:h264|mpeg2   a:aac-lc                                         m:video/mpeg
+Supported = f:rm                                                                              m:application/vnd.rn-realmedia-vbr
+Supported = f:wmv                                                                             m:video/x-ms-wmv
 
 # Supported audio formats:
 Supported = f:dts    m:audio/vnd.dts
