--- a/src/main/external-resources/renderers/Google-ChromecastUltra.conf
+++ b/src/main/external-resources/renderers/Google-ChromecastUltra.conf
@@ -31,14 +31,14 @@ MediaInfo = true
 
 # Supported video formats:
 # ChromecastUltra seems to be fine with mkv, and plays h265 unlike the classic
-Supported = f:mpegts|mp4|mkv          v:mp4|h264|h265        a:aac|aac-he|mp3      n:2      m:video/mpeg
-Supported = f:webm                    v:vp8|vp9              a:opus|vorbis         n:2      m:video/webm
+Supported = f:mpegts|mp4|mkv          v:mp4|h264|h265        a:aac-lc|he-aac|mp3   n:2   m:video/mpeg
+Supported = f:webm                    v:vp8|vp9              a:opus|vorbis         n:2   m:video/webm
 
 # Supported audio formats:
-Supported = f:aac            n:2      a:aac|aac-he          m:audio/aac
+Supported = f:aac            n:2      a:aac-lc|he-aac       m:audio/aac
 Supported = f:flac           n:2                            m:audio/flac
 Supported = f:mp3            n:2                            m:audio/mp3
-Supported = f:m4a|mp4        n:2      a:aac|aac-he          m:audio/mp4
+Supported = f:m4a|mp4        n:2      a:aac-lc|he-aac       m:audio/mp4
 Supported = f:wav            n:2      a:lpcm                m:audio/x-wav
 Supported = f:webm           n:2      a:opus|vorbis         m:audio/webm
 
