--- a/src/main/external-resources/renderers/LG-ST600.conf
+++ b/src/main/external-resources/renderers/LG-ST600.conf
@@ -21,10 +21,10 @@ WrapDTSIntoPCM = true
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:mpegps|mpegts|mkv   v:mpeg1|mpeg2|mp4|h264   a:ac3|lpcm|aac|mpa   m:video/mpeg
-Supported = f:avi|divx            v:mp4|divx|mjpeg         a:mp3|lpcm|mpa|ac3   m:video/x-divx   qpel:no   gmc:0
-Supported = f:mp4                 v:mp4|h264               a:ac3|aac            m:video/mp4
-Supported = f:wmv                 v:wmv|vc1                a:wma                m:video/x-ms-wmv                   n:2
+Supported = f:mpegps|mpegts|mkv   v:mpeg1|mpeg2|mp4|h264   a:ac3|lpcm|aac-lc|mpa m:video/mpeg
+Supported = f:avi|divx            v:mp4|divx|mjpeg         a:mp3|lpcm|mpa|ac3    m:video/x-divx   qpel:no   gmc:0
+Supported = f:mp4                 v:mp4|h264               a:ac3|aac-lc          m:video/mp4
+Supported = f:wmv                 v:wmv|vc1                a:wma                 m:video/x-ms-wmv                   n:2
 
 # Supported audio formats:
 Supported = f:wav     n:6   m:audio/wav        a:dts|lpcm     s:48000	
