--- a/src/main/external-resources/renderers/LG-WebOS.conf
+++ b/src/main/external-resources/renderers/LG-WebOS.conf
@@ -24,14 +24,14 @@ TranscodedVideoFileSize = -1
 MediaInfo = true
 
 # Supported video formats:
-#Supported = f:3g2|3gp     v:h264|mp4                        a:aac|aac-he                            m:video/3gpp
-Supported = f:avi         v:h264|mjpeg|mp4|xvid             a:aac|aac-he|ac3|dts|mp3|mpa            m:video/avi
-Supported = f:mkv         v:h264|h265|mp4|mpeg2|vp8|vp9     a:aac|aac-he|ac3|dts|mp3|mpa|vorbis     m:video/x-matroska
-Supported = f:mov         v:h264|h265|mp4                   a:aac|aac-he                            m:video/quicktime
-Supported = f:mp4|m4v     v:h264|mp4                        a:aac|aac-he                            m:video/mp4
-Supported = f:mpegps      v:mpeg1|mpeg2                     a:ac3|lpcm|mpa                          m:video/mpeg
-Supported = f:mpegts      v:h264|mpeg2                      a:aac|aac-he|ac3|dts|eac3               m:video/mpeg
-Supported = f:wmv|asf     v:wmv|vc1                         a:wma                                   m:video/x-ms-wmv
+#Supported = f:3g2|3gp     v:h264|mp4                       a:aac-lc|he-aac                            m:video/3gpp
+Supported = f:avi         v:h264|mjpeg|mp4|xvid             a:aac-lc|he-aac|ac3|dts|mp3|mpa            m:video/avi
+Supported = f:mkv         v:h264|h265|mp4|mpeg2|vp8|vp9     a:aac-lc|he-aac|ac3|dts|mp3|mpa|vorbis     m:video/x-matroska
+Supported = f:mov         v:h264|h265|mp4                   a:aac-lc|he-aac                            m:video/quicktime
+Supported = f:mp4|m4v     v:h264|mp4                        a:aac-lc|he-aac                            m:video/mp4
+Supported = f:mpegps      v:mpeg1|mpeg2                     a:ac3|lpcm|mpa                             m:video/mpeg
+Supported = f:mpegts      v:h264|mpeg2                      a:aac-lc|he-aac|ac3|dts|eac3               m:video/mpeg
+Supported = f:wmv|asf     v:wmv|vc1                         a:wma                                      m:video/x-ms-wmv
 
 # Supported audio formats:
 Supported = f:mp3   m:audio/mpeg
