--- a/src/main/external-resources/renderers/Microsoft-Xbox360.conf
+++ b/src/main/external-resources/renderers/Microsoft-Xbox360.conf
@@ -30,7 +30,7 @@ MediaInfo = true
 
 # Supported video formats:
 Supported = f:avi   v:divx|mp4   a:ac3|mp3         m:video/avi
-Supported = f:mp4   v:h264|mp4   a:aac       n:2   m:video/mp4
+Supported = f:mp4   v:h264|mp4   a:aac-lc    n:2   m:video/mp4
 Supported = f:wmv   v:wmv|vc1    a:wma             m:video/x-ms-wmv
 
 # Supported audio formats:
