--- a/src/main/external-resources/renderers/Panasonic-DMPBDT360.conf
+++ b/src/main/external-resources/renderers/Panasonic-DMPBDT360.conf
@@ -34,10 +34,10 @@ SendDateMetadata = false
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:mkv       v:h264         a:aac|dts|flac|vorbis   m:video/x-matroska
-Supported = f:mov|mp4   v:h264         a:aac|ac3               m:video/mp4
-Supported = f:mpegps    v:mpeg2        a:ac3|lpcm              m:video/mpeg
-Supported = f:mpegts    v:mpeg2|h264   a:aac|ac3               m:video/mpeg
+Supported = f:mkv       v:h264         a:aac-lc|dts|flac|vorbis   m:video/x-matroska
+Supported = f:mov|mp4   v:h264         a:aac-lc|ac3               m:video/mp4
+Supported = f:mpegps    v:mpeg2        a:ac3|lpcm                 m:video/mpeg
+Supported = f:mpegts    v:mpeg2|h264   a:aac-lc|ac3               m:video/mpeg
 
 # Supported audio formats:
 Supported = f:aac    m:audio/x-m4a
