--- a/src/main/external-resources/renderers/Panasonic-Viera.conf
+++ b/src/main/external-resources/renderers/Panasonic-Viera.conf
@@ -68,10 +68,10 @@ MediaInfo = true
 # By default more widely supported "video/divx" is used but "video/x-msvideo" may work better on some TVs.
 
 # Supported video formats:
-Supported = f:avi|divx   v:divx|mjpeg|mp4         a:ac3|lpcm|mp3|mpa   m:video/divx       qpel:yes|no   gmc:0
-Supported = f:mpegps     v:h264|mp4|mpeg1|mpeg2   a:aac|ac3|lpcm       m:video/mpeg
-Supported = f:mpegts     v:h264|mp4|mpeg1|mpeg2   a:aac|ac3|lpcm|mpa   m:video/mpeg
-Supported = f:wmv        v:vc1                    a:wma                m:video/x-ms-wmv                         n:2
+Supported = f:avi|divx   v:divx|mjpeg|mp4         a:ac3|lpcm|mp3|mpa    m:video/divx       qpel:yes|no   gmc:0
+Supported = f:mpegps     v:h264|mp4|mpeg1|mpeg2   a:aac-lc|ac3|lpcm     m:video/mpeg
+Supported = f:mpegts     v:h264|mp4|mpeg1|mpeg2   a:aac-lc|ac3|lpcm|mpa m:video/mpeg
+Supported = f:wmv        v:vc1                    a:wma                 m:video/x-ms-wmv                         n:2
 
 # Supported audio formats:
 Supported = f:aac     m:audio/x-m4a      n:2   a:(?!alac).+
