--- a/src/main/external-resources/renderers/Panasonic-VieraAS600E.conf
+++ b/src/main/external-resources/renderers/Panasonic-VieraAS600E.conf
@@ -38,8 +38,8 @@ MediaInfo = true
 Supported = f:avi|divx   v:divx|h264|mjpeg|mp4    a:ac3|lpcm|mp3|mpa                        m:video/avi          qpel:yes|no   gmc:0
 Supported = f:mp4|mov    v:h264|mp4               a:ac3|dts|dtshd|truehd|lpcm|mpa|mp3       m:video/mp4
 Supported = f:mkv        v:h264|mp4               a:ac3|dts|dtshd|truehd|aac|lpcm|mpa|mp3   m:video/x-matroska
-Supported = f:mpegps     v:h264|mp4|mpeg1|mpeg2   a:aac|ac3|lpcm                            m:video/mpeg
-Supported = f:mpegts     v:h264|mp4|mpeg1|mpeg2   a:aac|ac3|lpcm|mpa                        m:video/mpeg
+Supported = f:mpegps     v:h264|mp4|mpeg1|mpeg2   a:aac-lc|ac3|lpcm                         m:video/mpeg
+Supported = f:mpegts     v:h264|mp4|mpeg1|mpeg2   a:aac-lc|ac3|lpcm|mpa                     m:video/mpeg
 Supported = f:wmv        v:vc1                    a:wma                                     m:video/x-ms-wmv                           n:2
 
 # Supported audio formats:
