--- a/src/main/external-resources/renderers/Panasonic-VieraE6.conf
+++ b/src/main/external-resources/renderers/Panasonic-VieraE6.conf
@@ -41,20 +41,20 @@ MediaInfo = true
 # By default more widely supported "video/divx" is used but "video/x-msvideo" may work better on some TVs.
 
 # Supported video formats:
-Supported = f:3gp|3g2       v:h264|mp4                 a:aac|aac-he                                      m:video/3gpp
-Supported = f:avi           v:h264|mjpeg|mp4|vc1|wmv   a:aac|aac-he|ac3|adpcm|dts|eac3|lpcm|mp3|mpa|wma  m:video/avi
-Supported = f:flv           v:h264                     a:aac|mp3                                         m:video/x-flv
-Supported = f:mp4|m4v|f4v   v:h264|mp4|mpeg2           a:aac|aac-he|ac3|eac3|mp3|mpa                     m:video/mp4
-Supported = f:mkv           v:h264|mp4|mpeg2           a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|mpa|vorbis     m:video/x-matroska
-Supported = f:mpegps        v:mpeg2                    a:ac3|lpcm|mpa                                    m:video/mpeg
-Supported = f:mpegts        v:h264|mpeg1|mpeg2         a:aac|aac-he|ac3|eac3|mpa                         m:video/mpeg
-Supported = f:mpegts        v:mp4                      a:aac|aac-he|ac3|eac3|mpa                         m:video/mp4
-Supported = f:wmv|asf       v:vc1                      a:aac|aac-he|ac3|eac3|lpcm|mp3|wma                m:video/x-ms-wmv
+Supported = f:3gp|3g2       v:h264|mp4                 a:aac-lc|he-aac                                      m:video/3gpp
+Supported = f:avi           v:h264|mjpeg|mp4|vc1|wmv   a:aac-lc|he-aac|ac3|adpcm|dts|eac3|lpcm|mp3|mpa|wma  m:video/avi
+Supported = f:flv           v:h264                     a:aac-lc|mp3                                         m:video/x-flv
+Supported = f:mp4|m4v|f4v   v:h264|mp4|mpeg2           a:aac-lc|he-aac|ac3|eac3|mp3|mpa                     m:video/mp4
+Supported = f:mkv           v:h264|mp4|mpeg2           a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|mpa|vorbis     m:video/x-matroska
+Supported = f:mpegps        v:mpeg2                    a:ac3|lpcm|mpa                                       m:video/mpeg
+Supported = f:mpegts        v:h264|mpeg1|mpeg2         a:aac-lc|he-aac|ac3|eac3|mpa                         m:video/mpeg
+Supported = f:mpegts        v:mp4                      a:aac-lc|he-aac|ac3|eac3|mpa                         m:video/mp4
+Supported = f:wmv|asf       v:vc1                      a:aac-lc|he-aac|ac3|eac3|lpcm|mp3|wma                m:video/x-ms-wmv
 
 # Supported audio formats:
-Supported = f:3gp|3g2|mp4   m:audio/mp4                a:aac|aac-he
+Supported = f:3gp|3g2|mp4   m:audio/mp4                a:aac-lc|he-aac
 Supported = f:aac           m:audio/x-m4a              a:(?!alac).+
-Supported = f:adts          m:audio/vnd.dlna.adts      a:aac|aac-he
+Supported = f:adts          m:audio/vnd.dlna.adts      a:aac-lc|he-aac
 Supported = f:flac          m:audio/flac
 Supported = f:mp3           m:audio/mpeg
 Supported = f:wav           m:audio/x-wav              a:dts|lpcm                s:48000
