--- a/src/main/external-resources/renderers/Pioneer-BDP.conf
+++ b/src/main/external-resources/renderers/Pioneer-BDP.conf
@@ -30,19 +30,19 @@ DefaultVBVBufSize = true
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:3gp|3g2      v:mp4                     a:aac|aac-he                                             m:video/3gpp
-Supported = f:3gp|3g2      v:h264                    a:aac|aac-he                                             m:video/3gpp          w:719  h:575
-Supported = f:avi|divx     v:divx|mjpeg|mp4|vc1|wmv  a:aac|aac-he|ac3|dts|dtshd|eac3|lpcm|mp3|mpa|truehd|wma  m:video/avi
-Supported = f:avi          v:h264                    a:aac|aac-he|ac3|dts|dtshd|eac3|lpcm|mp3|mpa|truehd|wma  m:video/avi           w:719  h:575
-Supported = f:flv          v:h264                    a:aac|aac-he|mp3                                         m:video/x-flv         w:719  h:575
-Supported = f:mp4|m4v|f4v  v:mp4|mpeg2               a:aac|aac-he|ac3|eac3|mp3|mpa                            m:video/mp4
-Supported = f:mp4|m4v|f4v  v:h264                    a:aac|aac-he|ac3|eac3|mp3|mpa                            m:video/mp4           w:719  h:575
-Supported = f:mkv          v:divx|mp4|mpeg2          a:aac|aac-he|ac3|dts|dtshd|eac3|lpcm|mp3|mpa|truehd      m:video/x-matroska
-Supported = f:mkv          v:h264                    a:aac|aac-he|ac3|dts|dtshd|eac3|lpcm|mp3|mpa|truehd      m:video/x-matroska    w:719  h:575
-Supported = f:mpegps       v:mpeg1|mpeg2             a:ac3|lpcm|mpa                                           m:video/mpeg
-Supported = f:mpegts       v:mpeg2                   a:aac|aac-he|ac3|eac3|mpa                                m:video/mpeg
-Supported = f:mpegts       v:h264                    a:aac|aac-he|ac3|eac3|mpa                                m:video/mpeg          w:719  h:575
-Supported = f:wmv          v:vc1|wmv                 a:aac|aac-he|ac3|eac3|lpcm|mp3|wma                       m:video/x-ms-wmv
+Supported = f:3gp|3g2      v:mp4                     a:aac-lc|he-aac                                             m:video/3gpp
+Supported = f:3gp|3g2      v:h264                    a:aac-lc|he-aac                                             m:video/3gpp          w:719  h:575
+Supported = f:avi|divx     v:divx|mjpeg|mp4|vc1|wmv  a:aac-lc|he-aac|ac3|dts|dtshd|eac3|lpcm|mp3|mpa|truehd|wma  m:video/avi
+Supported = f:avi          v:h264                    a:aac-lc|he-aac|ac3|dts|dtshd|eac3|lpcm|mp3|mpa|truehd|wma  m:video/avi           w:719  h:575
+Supported = f:flv          v:h264                    a:aac-lc|he-aac|mp3                                         m:video/x-flv         w:719  h:575
+Supported = f:mp4|m4v|f4v  v:mp4|mpeg2               a:aac-lc|he-aac|ac3|eac3|mp3|mpa                            m:video/mp4
+Supported = f:mp4|m4v|f4v  v:h264                    a:aac-lc|he-aac|ac3|eac3|mp3|mpa                            m:video/mp4           w:719  h:575
+Supported = f:mkv          v:divx|mp4|mpeg2          a:aac-lc|he-aac|ac3|dts|dtshd|eac3|lpcm|mp3|mpa|truehd      m:video/x-matroska
+Supported = f:mkv          v:h264                    a:aac-lc|he-aac|ac3|dts|dtshd|eac3|lpcm|mp3|mpa|truehd      m:video/x-matroska    w:719  h:575
+Supported = f:mpegps       v:mpeg1|mpeg2             a:ac3|lpcm|mpa                                              m:video/mpeg
+Supported = f:mpegts       v:mpeg2                   a:aac-lc|he-aac|ac3|eac3|mpa                                m:video/mpeg
+Supported = f:mpegts       v:h264                    a:aac-lc|he-aac|ac3|eac3|mpa                                m:video/mpeg          w:719  h:575
+Supported = f:wmv          v:vc1|wmv                 a:aac-lc|he-aac|ac3|eac3|lpcm|mp3|wma                       m:video/x-ms-wmv
 
 # Supported audio formats:
 Supported = f:aac               m:audio/x-m4a        a:(?!alac).+
