--- a/src/main/external-resources/renderers/Samsung-9series.conf
+++ b/src/main/external-resources/renderers/Samsung-9series.conf
@@ -45,19 +45,19 @@ CharMap = / :
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:3gp|3g2  v:h264|mp4                                         a:aac|aac-he                                      m:video/3gpp
-Supported = f:avi      v:divx|h263|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv  a:aac|aac-he|ac3|eac3|lpcm|mp3|mpa|wma            m:video/avi                  gmc:0|1
-Supported = f:divx     v:divx|h263|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv  a:aac|aac-he|ac3|eac3|lpcm|mp3|mpa|wma            m:video/x-divx
-Supported = f:flv      v:h263|h264|mp4|vp6                                 a:aac|aac-he|mp3                                  m:video/x-flv
-Supported = f:mkv      v:h264|h265|mp4|mpeg1|mpeg2|vc1|vp6|wmv             a:aac|aac-he|ac3|dts|dtshd|eac3|lpcm|mp3|mpa|wma  m:video/x-mkv
-Supported = f:mkv      v:h263|h264|h265|mp4|mpeg1|mpeg2|vc1|vp6|wmv        a:vorbis                                          m:video/x-mkv                n:2
-Supported = f:mov      v:h263|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv       a:aac|aac-he|ac3|eac3|lpcm|mp3|mpa|wma            m:video/quicktime
-Supported = f:mp4      v:h264|h265                                         a:aac|aac-he|ac3|dts|dtshd|eac3|lpcm|mp3|mpa|wma  m:video/mpeg
-Supported = f:mpegps   v:mpeg1|mpeg2                                       a:aac|aac-he|ac3|lpcm|mp3|mpa                     m:video/mpeg
-Supported = f:mpegts   v:h264|h265|mp4|mpeg2                               a:aac|aac-he|ac3|dts|dtshd|eac3|lpcm|mp3|mpa|wma  m:video/vnd.dlna.mpeg-tts
-Supported = f:rm                                                           a:cook                                            m:video/vnd.rn-realvideo
-Supported = f:webm     v:vp8|vp9                                           a:vorbis                                          m:video/webm                 n:2
-Supported = f:wmv|asf  v:mp4|vc1|vp6|wmv                                   a:wma                                             m:video/x-ms-wmv
+Supported = f:3gp|3g2  v:h264|mp4                                          a:aac-lc|he-aac                                     m:video/3gpp
+Supported = f:avi      v:divx|h263|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv  a:aac-lc|he-aac|ac3|eac3|lpcm|mp3|mpa|wma           m:video/avi                  gmc:0|1
+Supported = f:divx     v:divx|h263|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv  a:aac-lc|he-aac|ac3|eac3|lpcm|mp3|mpa|wma           m:video/x-divx
+Supported = f:flv      v:h263|h264|mp4|vp6                                 a:aac-lc|he-aac|mp3                                 m:video/x-flv
+Supported = f:mkv      v:h264|h265|mp4|mpeg1|mpeg2|vc1|vp6|wmv             a:aac-lc|he-aac|ac3|dts|dtshd|eac3|lpcm|mp3|mpa|wma m:video/x-mkv
+Supported = f:mkv      v:h263|h264|h265|mp4|mpeg1|mpeg2|vc1|vp6|wmv        a:vorbis                                            m:video/x-mkv                n:2
+Supported = f:mov      v:h263|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv       a:aac-lc|he-aac|ac3|eac3|lpcm|mp3|mpa|wma           m:video/quicktime
+Supported = f:mp4      v:h264|h265                                         a:aac-lc|he-aac|ac3|dts|dtshd|eac3|lpcm|mp3|mpa|wma m:video/mpeg
+Supported = f:mpegps   v:mpeg1|mpeg2                                       a:aac-lc|he-aac|ac3|lpcm|mp3|mpa                    m:video/mpeg
+Supported = f:mpegts   v:h264|h265|mp4|mpeg2                               a:aac-lc|he-aac|ac3|dts|dtshd|eac3|lpcm|mp3|mpa|wma m:video/vnd.dlna.mpeg-tts
+Supported = f:rm                                                           a:cook                                              m:video/vnd.rn-realvideo
+Supported = f:webm     v:vp8|vp9                                           a:vorbis                                            m:video/webm                 n:2
+Supported = f:wmv|asf  v:mp4|vc1|vp6|wmv                                   a:wma                                               m:video/x-ms-wmv
 
 # Supported audio formats:
 Supported = f:aac|alac       m:audio/mp4
