--- a/src/main/external-resources/renderers/Samsung-BDC6800.conf
+++ b/src/main/external-resources/renderers/Samsung-BDC6800.conf
@@ -25,7 +25,7 @@ CharMap = / :
 # Supported video formats:
 Supported = f:avi      v:divx|h264|mp4      a:ac3|dts|lpcm|mp3|wma   m:video/avi
 Supported = f:mkv      v:divx|h264|vc1      a:ac3|dts|mp3            m:video/x-matroska
-Supported = f:mp4      v:h264|mp4           a:aac                    m:video/mp4
+Supported = f:mp4      v:h264|mp4           a:aac-lc                 m:video/mp4
 Supported = f:mpegps   v:h264|mpeg1|mpeg2   a:ac3|dts|mpa            m:video/mpeg
 Supported = f:wmv      v:vc1|wmv            a:wma                    m:video/x-ms-wmv
 
