--- a/src/main/external-resources/renderers/Samsung-BDH6500.conf
+++ b/src/main/external-resources/renderers/Samsung-BDH6500.conf
@@ -29,15 +29,15 @@ CharMap = / :
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:3gp             v:h264|mjpeg|mp4|mpeg1|mpeg2|sor|vc1|wmv   a:adpcm|aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma           m:video/3gpp
-Supported = f:avi|divx        v:h264|mjpeg|mp4|mpeg1|mpeg2|sor|vc1|wmv   a:adpcm|aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   gmc:0   m:video/avi
-Supported = f:flv             v:h264|mjpeg|mp4|mpeg1|mpeg2|sor|vc1|wmv   a:adpcm|aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma           m:video/x-flv
-Supported = f:mkv             v:h264|mjpeg|mp4|mpeg1|mpeg2|sor|vc1|wmv   a:adpcm|aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma           m:video/x-matroska
-Supported = f:mov             v:h264|mjpeg|mp4|mpeg1|mpeg2|sor|vc1|wmv   a:adpcm|aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma           m:video/quicktime
-Supported = f:mp4             v:h264|mjpeg|mp4|mpeg1|mpeg2|sor|vc1|wmv   a:adpcm|aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma           m:video/mp4
-Supported = f:mpegps|mpegts   v:h264|mjpeg|mp4|mpeg1|mpeg2|sor|vc1|wmv   a:adpcm|aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma           m:video/mpeg
+Supported = f:3gp             v:h264|mjpeg|mp4|mpeg1|mpeg2|sor|vc1|wmv   a:adpcm|aac|he-aac|ac3|dts|eac3|lpcm|mp3|wma           m:video/3gpp
+Supported = f:avi|divx        v:h264|mjpeg|mp4|mpeg1|mpeg2|sor|vc1|wmv   a:adpcm|aac|he-aac|ac3|dts|eac3|lpcm|mp3|wma   gmc:0   m:video/avi
+Supported = f:flv             v:h264|mjpeg|mp4|mpeg1|mpeg2|sor|vc1|wmv   a:adpcm|aac|he-aac|ac3|dts|eac3|lpcm|mp3|wma           m:video/x-flv
+Supported = f:mkv             v:h264|mjpeg|mp4|mpeg1|mpeg2|sor|vc1|wmv   a:adpcm|aac|he-aac|ac3|dts|eac3|lpcm|mp3|wma           m:video/x-matroska
+Supported = f:mov             v:h264|mjpeg|mp4|mpeg1|mpeg2|sor|vc1|wmv   a:adpcm|aac|he-aac|ac3|dts|eac3|lpcm|mp3|wma           m:video/quicktime
+Supported = f:mp4             v:h264|mjpeg|mp4|mpeg1|mpeg2|sor|vc1|wmv   a:adpcm|aac|he-aac|ac3|dts|eac3|lpcm|mp3|wma           m:video/mp4
+Supported = f:mpegps|mpegts   v:h264|mjpeg|mp4|mpeg1|mpeg2|sor|vc1|wmv   a:adpcm|aac|he-aac|ac3|dts|eac3|lpcm|mp3|wma           m:video/mpeg
 Supported = f:webm            v:vp8                                      a:vorbis                                               m:video/webm
-Supported = f:wmv             v:h264|mjpeg|mp4|mpeg1|mpeg2|sor|vc1|wmv   a:adpcm|aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma           m:video/x-ms-wmv
+Supported = f:wmv             v:h264|mjpeg|mp4|mpeg1|mpeg2|sor|vc1|wmv   a:adpcm|aac|he-aac|ac3|dts|eac3|lpcm|mp3|wma           m:video/x-ms-wmv
 
 # Supported audio formats:
 Supported = f:aac          m:audio/x-m4a
