--- a/src/main/external-resources/renderers/Samsung-ES8000.conf
+++ b/src/main/external-resources/renderers/Samsung-ES8000.conf
@@ -32,12 +32,12 @@ CharMap = / :
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:3gp             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|wmv   a:aac|aac-he|ac3|dts|lpcm|mp3|wma   m:video/3gpp
-Supported = f:avi             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|wmv   a:aac|aac-he|ac3|dts|lpcm|mp3|wma   m:video/avi
-Supported = f:mkv             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|wmv   a:aac|aac-he|ac3|dts|lpcm|mp3|wma   m:video/x-matroska
-Supported = f:mp4             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|wmv   a:aac|aac-he|ac3|dts|lpcm|mp3|wma   m:video/mp4
-Supported = f:mpegps|mpegts   v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|wmv   a:aac|aac-he|ac3|dts|lpcm|mp3|wma   m:video/mpeg
-Supported = f:wmv             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|wmv   a:aac|aac-he|ac3|dts|lpcm|mp3|wma   m:video/x-ms-wmv
+Supported = f:3gp             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|wmv   a:aac-lc|he-aac|ac3|dts|lpcm|mp3|wma   m:video/3gpp
+Supported = f:avi             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|wmv   a:aac-lc|he-aac|ac3|dts|lpcm|mp3|wma   m:video/avi
+Supported = f:mkv             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|wmv   a:aac-lc|he-aac|ac3|dts|lpcm|mp3|wma   m:video/x-matroska
+Supported = f:mp4             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|wmv   a:aac-lc|he-aac|ac3|dts|lpcm|mp3|wma   m:video/mp4
+Supported = f:mpegps|mpegts   v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|wmv   a:aac-lc|he-aac|ac3|dts|lpcm|mp3|wma   m:video/mpeg
+Supported = f:wmv             v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|wmv   a:aac-lc|he-aac|ac3|dts|lpcm|mp3|wma   m:video/x-ms-wmv
 
 # Supported audio formats:
 Supported = f:aac    m:audio/x-m4a
