--- a/src/main/external-resources/renderers/Samsung-GalaxyS5.conf
+++ b/src/main/external-resources/renderers/Samsung-GalaxyS5.conf
@@ -25,11 +25,11 @@ CustomFFmpegOptions = -async 1 -fflags +genpts -c:a libmp3lame -ac 2 -b:v 35000k
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:avi|divx   v:divx|mp4   a:mp3       m:video/x-divx     gmc:0   n:2
-Supported = f:mkv        v:h264|mp4   a:aac|mp3   m:video/x-matroska         n:2
-Supported = f:mp4        v:h264|mp4   a:aac|mp3   m:video/mp4                n:2
-Supported = f:mpegts     v:h264|mp4   a:aac|mp3   m:video/mpeg
-Supported = f:wmv        v:vc1|wmv    a:wma       m:video/x-ms-wmv           n:2
+Supported = f:avi|divx   v:divx|mp4   a:mp3          m:video/x-divx     gmc:0   n:2
+Supported = f:mkv        v:h264|mp4   a:aac-lc|mp3   m:video/x-matroska         n:2
+Supported = f:mp4        v:h264|mp4   a:aac-lc|mp3   m:video/mp4                n:2
+Supported = f:mpegts     v:h264|mp4   a:aac-lc|mp3   m:video/mpeg
+Supported = f:wmv        v:vc1|wmv    a:wma          m:video/x-ms-wmv           n:2
 
 # Supported audio formats:
 Supported = f:aac    a:(?!alac).+   n:2             m:audio/x-m4a
