--- a/src/main/external-resources/renderers/Samsung-HTF4.conf
+++ b/src/main/external-resources/renderers/Samsung-HTF4.conf
@@ -30,7 +30,7 @@ MediaInfo = true
 # Supported video formats:
 Supported = f:avi             v:divx|h264|mp4      a:ac3|dts|lpcm|mp3|wma   m:video/avi
 Supported = f:mkv             v:divx|h264|vc1      a:ac3|dts|mp3            m:video/x-matroska
-Supported = f:mp4             v:h264|mp4           a:aac                    m:video/mp4
+Supported = f:mp4             v:h264|mp4           a:aac-lc                 m:video/mp4
 Supported = f:wmv             v:vc1                a:wma                    m:video/x-ms-wmv
 Supported = f:mpegps|mpegts   v:h264|mpeg1|mpeg2   a:ac3|dts|mpa            m:video/mpeg
 
