--- a/src/main/external-resources/renderers/Samsung-HU7000.conf
+++ b/src/main/external-resources/renderers/Samsung-HU7000.conf
@@ -21,16 +21,16 @@ CharMap = / :
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:3gp        v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv        a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   m:video/3gpp
-Supported = f:avi|divx   v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv        a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   m:video/avi
-Supported = f:flv        v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv        a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   m:video/x-flv
-Supported = f:mkv        v:divx|h264|h265|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv   a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   m:video/x-matroska
-Supported = f:mp4        v:divx|h264|h265|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv   a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   m:video/mp4
-Supported = f:mov        v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv        a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   m:video/quicktime
-Supported = f:mpegps     v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv        a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   m:video/mpeg
-Supported = f:mpegts     v:divx|h264|h265|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv   a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   m:video/mpeg
-Supported = f:webm       v:vp8                                                a:vorbis                                 m:video/webm
-Supported = f:wmv        v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv        a:aac|aac-he|ac3|dts|eac3|lpcm|mp3|wma   m:video/x-ms-wmv
+Supported = f:3gp        v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv        a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|wma   m:video/3gpp
+Supported = f:avi|divx   v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv        a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|wma   m:video/avi
+Supported = f:flv        v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv        a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|wma   m:video/x-flv
+Supported = f:mkv        v:divx|h264|h265|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv   a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|wma   m:video/x-matroska
+Supported = f:mp4        v:divx|h264|h265|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv   a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|wma   m:video/mp4
+Supported = f:mov        v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv        a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|wma   m:video/quicktime
+Supported = f:mpegps     v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv        a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|wma   m:video/mpeg
+Supported = f:mpegts     v:divx|h264|h265|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv   a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|wma   m:video/mpeg
+Supported = f:webm       v:vp8                                                a:vorbis                                    m:video/webm
+Supported = f:wmv        v:divx|h264|mjpeg|mp4|mpeg1|mpeg2|vc1|vp6|wmv        a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mp3|wma   m:video/x-ms-wmv
 
 # Supported audio formats:
 Supported = f:aac    m:audio/x-m4a
