--- a/src/main/external-resources/renderers/Sony-Bluray2013.conf
+++ b/src/main/external-resources/renderers/Sony-Bluray2013.conf
@@ -26,12 +26,12 @@ HalveBitrate = true
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:avi             v:mp4           a:ac3|lpcm|mp3|mpa                        m:video/mp4
-Supported = f:mkv             v:h264|mp4      a:aac|ac3|dts|dtshd|lpcm|mp3|mpa|truehd   m:video/x-matroska
-Supported = f:mp4             v:h264|mp4      a:aac|ac3|dts|dtshd|lpcm|mp3|mpa|truehd   m:video/mp4
-Supported = f:mpegps|mpegts   v:mpeg1|mpeg2   a:ac3|dts|lpcm|mp3|mpa                    m:video/mpeg 
-Supported = f:mpegts          v:h264|vc1      a:aac|ac3|dts|dtshd|lpcm|mp3|mpa|truehd   m:video/vnd.dlna.mpeg-tts
-Supported = f:wmv             v:wmv|vc1       a:wma                                     m:video/mp4
+Supported = f:avi             v:mp4           a:ac3|lpcm|mp3|mpa                          m:video/mp4
+Supported = f:mkv             v:h264|mp4      a:aac-lc|ac3|dts|dtshd|lpcm|mp3|mpa|truehd  m:video/x-matroska
+Supported = f:mp4             v:h264|mp4      a:aac-lc|ac3|dts|dtshd|lpcm|mp3|mpa|truehd  m:video/mp4
+Supported = f:mpegps|mpegts   v:mpeg1|mpeg2   a:ac3|dts|lpcm|mp3|mpa                      m:video/mpeg
+Supported = f:mpegts          v:h264|vc1      a:aac-lc|ac3|dts|dtshd|lpcm|mp3|mpa|truehd  m:video/vnd.dlna.mpeg-tts
+Supported = f:wmv             v:wmv|vc1       a:wma                                       m:video/mp4
 
 # Supported audio formats:
 Supported = f:lpcm   n:2   m:audio/L16    s:48000
