--- a/src/main/external-resources/renderers/Sony-BraviaXD.conf
+++ b/src/main/external-resources/renderers/Sony-BraviaXD.conf
@@ -48,22 +48,22 @@ HalveBitrate = true
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:3gp|3g2    v:h264|mp4                         a:aac|aac-he|ac3|eac3|mpa              m:video/3gpp
-Supported = f:avi        v:h264|h265|mjpeg|mp4|xvid         a:aac|aac-he|ac3|dts|eac3|mp3|mpa      m:video/avi
-Supported = f:mkv        v:h264|mp4|vp8|vp9|xvid            a:aac|aac-he|ac3|dts|eac3|mpa|vorbis   m:video/x-matroska
-Supported = f:mkv        v:h265                             a:aac|aac-he|ac3|dts|eac3              m:video/x-matroska
-Supported = f:mov        v:h264|mjpeg|mp4                   a:aac|aac-he|ac3|dts|eac3|lpcm|mpa     m:video/quicktime
-Supported = f:mp4        v:h264|mp4                         a:aac|aac-he|ac3|dts|eac3|mpa          m:video/mp4
-Supported = f:mp4        v:h265                             a:aac|aac-he|ac3|dts|eac3              m:video/mp4
-Supported = f:mpegps     v:mpeg1|mpeg2                      a:ac3|lpcm|mpa                         m:video/mpeg
-Supported = f:mpegts     v:h264|h265|mpeg2                  a:aac|aac-he|ac3|eac3|mpa              m:video/mpeg
-Supported = f:webm       v:vp8|vp9                          a:vorbis                               m:video/webm
-Supported = f:wmv|asf    v:vc1                              a:wma                                  m:video/x-ms-wmv
+Supported = f:3gp|3g2    v:h264|mp4                         a:aac-lc|he-aac|ac3|eac3|mpa              m:video/3gpp
+Supported = f:avi        v:h264|h265|mjpeg|mp4|xvid         a:aac-lc|he-aac|ac3|dts|eac3|mp3|mpa      m:video/avi
+Supported = f:mkv        v:h264|mp4|vp8|vp9|xvid            a:aac-lc|he-aac|ac3|dts|eac3|mpa|vorbis   m:video/x-matroska
+Supported = f:mkv        v:h265                             a:aac-lc|he-aac|ac3|dts|eac3              m:video/x-matroska
+Supported = f:mov        v:h264|mjpeg|mp4                   a:aac-lc|he-aac|ac3|dts|eac3|lpcm|mpa     m:video/quicktime
+Supported = f:mp4        v:h264|mp4                         a:aac-lc|he-aac|ac3|dts|eac3|mpa          m:video/mp4
+Supported = f:mp4        v:h265                             a:aac-lc|he-aac|ac3|dts|eac3              m:video/mp4
+Supported = f:mpegps     v:mpeg1|mpeg2                      a:ac3|lpcm|mpa                            m:video/mpeg
+Supported = f:mpegts     v:h264|h265|mpeg2                  a:aac-lc|he-aac|ac3|eac3|mpa              m:video/mpeg
+Supported = f:webm       v:vp8|vp9                          a:vorbis                                  m:video/webm
+Supported = f:wmv|asf    v:vc1                              a:wma                                     m:video/x-ms-wmv
 
 # Supported audio formats:
 Supported = f:3g2                                      m:audio/3gpp2
 Supported = f:3gp                                      m:audio/3gpp
-Supported = f:aac|m4a|mp4          a:aac|aac-he        m:audio/x-m4a
+Supported = f:aac|m4a|mp4          a:aac-lc|he-aac     m:audio/x-m4a
 Supported = f:flac                                     m:audio/flac
 Supported = f:mp3           n:2                        m:audio/mpeg                  s:48000
 Supported = f:wav                  a:dts|lpcm          m:audio/wav
