--- a/src/main/external-resources/renderers/Sony-PlayStationVita.conf
+++ b/src/main/external-resources/renderers/Sony-PlayStationVita.conf
@@ -28,12 +28,12 @@ HalveBitrate = true
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:mp4      v:h264|mp4   a:aac   m:video/mp4
-Supported = f:mpegts   v:h264|mp4   a:aac   m:video/mpeg
+Supported = f:mp4      v:h264|mp4   a:aac-lc   m:video/mp4
+Supported = f:mpegts   v:h264|mp4   a:aac-lc   m:video/mpeg
 
 # Supported audio formats:
 Supported = f:mp3            n:2             m:audio/mpeg
-Supported = f:mp4   a:aac    n:2             m:audio/x-m4a
+Supported = f:mp4   a:aac-lc    n:2          m:audio/x-m4a
 Supported = f:wav   a:lpcm   n:2   s:48000   m:audio/L16
 Supported = f:wav            n:2   s:48000   m:audio/wav
 
