--- a/src/main/external-resources/renderers/Sony-Xperia.conf
+++ b/src/main/external-resources/renderers/Sony-Xperia.conf
@@ -21,14 +21,14 @@ HalveBitrate = true
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:3gp|mov|mp4|mpegts   v:mp4|h264   a:aac|mp3   b:320   m:video/mp4
-Supported = f:ogg                               a:ogg               m:application/ogg
+Supported = f:3gp|mov|mp4|mpegts   v:mp4|h264   a:aac-lc|mp3   b:320   m:video/mp4
+Supported = f:ogg                               a:ogg                  m:application/ogg
 
 # Supported audio formats:
-Supported = f:mp3|3gp|mp4|m4a           a:mp3       b:320   m:audio/mp3
-Supported = f:mp3                       a:mp3       b:320   m:audio/mpeg
-Supported = f:mp4|3gp|3g2|m4a|aac       a:aac       b:320   m:audio/mp4
-Supported = f:mp3|3gp|3g2|mp4|m4a|aac   a:aac|mp3   b:320   m:audio/mpeg
-Supported = f:3gp                       a:mp3       b:320   m:audio/3gpp
-Supported = f:3g2                       a:mp3       b:320   m:audio/3gpp2
-Supported = f:wav                       a:wav               m:audio/x-wav
+Supported = f:mp3|3gp|mp4|m4a           a:mp3        b:320   m:audio/mp3
+Supported = f:mp3                       a:mp3        b:320   m:audio/mpeg
+Supported = f:mp4|3gp|3g2|m4a|aac       a:aac-lc     b:320   m:audio/mp4
+Supported = f:mp3|3gp|3g2|mp4|m4a|aac   a:aac-lc|mp3 b:320   m:audio/mpeg
+Supported = f:3gp                       a:mp3        b:320   m:audio/3gpp
+Supported = f:3g2                       a:mp3        b:320   m:audio/3gpp2
+Supported = f:wav                       a:wav                m:audio/x-wav
