--- a/src/main/external-resources/renderers/Technisat-S1Plus.conf
+++ b/src/main/external-resources/renderers/Technisat-S1Plus.conf
@@ -25,7 +25,7 @@ HalveBitrate = true
 MediaInfo = true
 
 # Supported video formats:
-Supported = f:mp4             v:h264|mp4     a:aac|ac3        m:video/mp4
+Supported = f:mp4             v:h264|mp4     a:aac-lc|ac3     m:video/mp4
 Supported = f:mpegps|mpegts   v:h264|mpeg2   a:ac3|lpcm|mpa   m:video/mpeg
 
 # Supported audio formats:
