--- a/src/main/external-resources/renderers/DefaultRenderer.conf
+++ b/src/main/external-resources/renderers/DefaultRenderer.conf
@@ -615,6 +615,7 @@ CharMap =
 #    mpegps   MPEG Program Stream                           video/mpeg                         Used in DVDs and VCDs
 #    mpegts   MPEG Transport Stream                         video/mpeg                         Used in sat TV and Blu-ray Discs
 #    mpegts   MPEG Transport Stream                         video/vnd.dlna.mpeg-tts            Alternative MIME-type for MPEG TS
+#    oga      Ogg Audio                                     audio/ogg
 #    ogx      Ogg container                                 application/ogg
 #    opus     Ogg Opus                                      audio/ogg
 #    png      Portable Network Graphics                     image/png
