Implemented SleepManager for managing system sleep prevention:   - Created class SleepManager   - Created enum PreventSleepMode   - Implemented SleepManager instance creation and initialization in PMS.java   - Implemented new configuration option "prevent_sleep" which supports the options in PreventSleepMode   - Implemented "conversion" from the old "prevents_sleep_mode" configuration setting to "prevent_sleep"   - Moved sleep management from SystemUtils to SleepManager   - Updated GeneralTab to use SleepManager and PreventSleepMode options

--- a/src/main/external-resources/UMS.conf
+++ b/src/main/external-resources/UMS.conf
@@ -193,12 +193,19 @@ ALIVE_delay =
 # Default: true
 http_engine_v2 =
 
-# Prevent Windows from sleeping
-# -----------------------------
-# If your host server has a power-saving mode, use this option to prevent the
-# server from hibernating or sleeping while it is streaming data.
-# Default: true
-prevents_sleep_mode =
+# Prevent system idle sleep
+# -------------------------
+# If your UMS host has a power-saving mode, use this option to prevent the
+# system from hibernating or sleeping. Currently only Windows and macOS are
+# supported. There are three modes:
+#
+# - Never: UMS doesn't interfere with system idle sleep.
+# - Playback: UMS prevents the system from going to sleep while playback from
+    UMS is active.
+# - Running: UMS prevents the system from going to sleep while UMS is running.
+#
+# Default: Playback
+prevent_sleep =
 
 # Selected renderers
 # ------------------
